# Ormcy

./: .env  CMakeLists.txt  README.md
Lib/Headers/Hallocy/: Allocator.h  Simd.h
Lib/Windows/: Hallocy.lib
Src/: Main.c
